# cognitrack

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed_demo.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py  analytics.py  auth.py  export.py  sessions.py  trials.py
apps/backend/app/core/: config.py
apps/backend/app/models/: __init__.py  analytics.py  session.py  trial.py  user.py
apps/backend/app/schemas/: __init__.py  analytics.py  auth.py  session.py  trial.py
apps/backend/app/services/: __init__.py  analytics.py
apps/frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: Layout.tsx  LoadingSpinner.tsx
apps/frontend/src/components/tasks/: TaskRunner.tsx
apps/frontend/src/hooks/: useKeyboard.ts
apps/frontend/src/pages/: AssessmentPage.tsx  HomePage.tsx  SessionDetailPage.tsx  SettingsPage.tsx  TrendsPage.tsx
apps/frontend/src/services/: api.ts
apps/frontend/src/store/: authStore.ts
